// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders the filtering sidebar list as expected when there are favorites 1`] = `
<div
  className="favorites-container"
>
  <h2
    className="favorites-header"
  >
    Your favorites
  </h2>
  <p>
    To delete a game from the list, click on it.
  </p>
  <ul
    className="favorites-list"
  >
    <li
      className="favorite"
      onClick={[Function]}
    >
      <img
        alt="Good Job!"
        className="favorite-image"
        src="https://giantbomb1.cbsistatic.com/uploads/original/0/30/3177321-job.png"
      />
      <span
        className="favorite-title"
      >
        Good Job!
      </span>
    </li>
  </ul>
  <button
    className="export-button unfavorited"
    disabled={false}
    onClick={[Function]}
  >
    Export to ICS
  </button>
</div>
`;

exports[`Renders the filtering sidebar list as expected when there are no favorites 1`] = `
<div
  className="favorites-container"
>
  <h2
    className="favorites-header"
  >
    Your favorites
  </h2>
  
  <ul
    className="favorites-list"
  >
    <li
      className="favorites-prompt"
    >
      Add games to your favorites list and you can export an ics file to add the release dates to your personal calendar.
    </li>
  </ul>
  <button
    className="export-button"
    disabled={true}
    onClick={[Function]}
  >
    Export to ICS
  </button>
</div>
`;
